# Boost-IPC-Utility

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/boost_ipc_util/: ipc_utility.h
include/boost_ipc_util/boost/: interprocess.h
include/boost_ipc_util/util/: logging.h  misc.h  uuid.h
include/boost_ipc_utility/: ipc_utility.h
include/boost_ipc_utility/boost/: interprocess.h
include/boost_ipc_utility/util/: macro.h  singleton.h
src/: ipc_utility.cpp
src/util/: logging.cpp  misc.cpp  uuid.cpp
